update Prop types, fixing code

--- a/front-end/src/pages/Answer/Answer.css
+++ b/front-end/src/pages/Answer/Answer.css
@@ -4,43 +4,49 @@
   background-color: #f5f5f5;
 }
 
-.answerPostContainer div, .answerPostContainer form, .answerPostContainer label, .answerPostContainer textarea, .answerPostContainer svg, .answerPostContainer span{
+.answerPostContainer div,
+.answerPostContainer form,
+.answerPostContainer label,
+.answerPostContainer textarea,
+.answerPostContainer svg,
+.answerPostContainer span {
   background-color: #f5f5f5;
 }
 
-.answerPostContainer form{
+.answerPostContainer form {
   margin-top: 0;
   margin: 15px;
 }
 
-.answerPostContainer textarea{
+.answerPostContainer textarea {
   margin-top: 15px;
   border: none;
-  border-bottom: 2px solid  #39393a;
+  border-bottom: 2px solid #39393a;
   height: 100px;
   width: 100vh;
 }
 
-.answerButtonContainer, .answerPostContainerButton{
+.answerButtonContainer,
+.answerPostContainerButton {
   text-align: right;
 }
 
-.answerButtonContainer{
+.answerButtonContainer {
   margin-right: 15px;
 }
 
-.answerPost{
+.answerPost {
   padding-top: 15px;
   padding-left: 15px;
   padding-bottom: 15px;
 }
 
-.answerPostReactions{
+.answerPostReactions {
   padding-top: 15px;
   padding-left: 15px;
 }
 
-.answerPostReactions svg{
+.answerPostReactions svg {
   margin-right: 5px;
   margin-left: 5px;
 }
